<resources>
    <string name="google_maps_key">AIzaSyCfv0XKWG8ZNaBz2P8zMiZk7IZyHaUHcp0</string>

    <string name="app_name">SuitApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_search">Buscar</string>
    <string name="menu_notifications">Notificaciones</string>
    <string name="menu_shopping">Compras</string>
    <string name="menu_favs">Favoritos</string>
    <string name="menu_account">Mi Cuenta</string>
    <string name="menu_categories">Categorías</string>
    <string name="menu_stores">Tiendas</string>
    <string name="menu_about">Acerca de</string>
    <string name="menu_logout">Salir</string>
    <string name="cart_select_shipping">Seleccioná un método de entrega</string>
    <string name="cart_select_card">Seleccione una tarjeta</string>
    <string name="cart_credit_card">Ingrese los datos de su tarjeta</string>
    <string name="cart_shop_confirm">Confirmá tu compra</string>

    <string name="menu_cart">Carrito</string>
    <string name="menu_articles">Artículos</string>
    <string name="menu_article_detail">Producto</string>
    <string name="search_hint">Buscar artículos y tiendas</string>
    <string name="filter">Filtrar</string>

    <!-- Botones -->
    <string name="bt_see_cart">Ver carrito</string>
    <string name="bt_buy_cart">Comprar carrito</string>
    <string name="bt_delete">Eliminar</string>
    <string name="bt_add_to_cart">Agregar al carrito</string>
    <string name="bt_more_from_store">Más productos del vendedor</string>
    <string name="bt_edit">Editar</string>
    <string name="bt_add_store">Agregar Tienda</string>
    <string name="bt_add_address">Agregar Dirección</string>
    <string name="bt_next">Continuar</string>
    <string name="bt_add_image">Agregar imagen</string>
    <string name="bt_publish">Publicar</string>
    <string name="bt_add_shipping">Agregar costo de envío</string>
    <string name="bt_add_variant">Agregar variante</string>

    <!-- Mensajes -->
    <string name="select_variant">Seleccione una variante</string>
    <string name="msg_article_added">Agregaste a tu carrito</string>
    <string name="selec_option_img">Seleccione una opción</string>
    <string name="selec_galery">Seleccionar de la galería</string>
    <string name="capture_photo">Capturar una foto</string>
    <string name="congrats_store">¡Publicaste tu tienda!</string>
    <string name="congrats_art">¡Publicaste tu artículo!</string>
    <string name="congrats_det_store">Ahora podes publicar tus artículos</string>
    <string name="congrats_det_article">Podes cargar más artículos si lo deseas</string>

    <!-- Errores -->
    <string name="mandatory_field">Debe completar el campo</string>
    <string name="max_stock">Sin stock suficiente</string>
    <string name="error_select_variant">Debe seleccionar una variante</string>
    <string name="error_max_length">Excede la cantidad de caracteres</string>
    <string name="error_select_option">Debe seleccionar una opción</string>
    <string name="error_complete_form">Complete el formulario para continuar</string>
    <string name="error_shipping">Debe seleccionar al menos un método de entrega</string>
    <string name="error_shipping_prov">Debe ingresar al menos un costo de envío</string>
    <string name="error_variant">Debe ingresar al menos una variante</string>

    <!--Agregar tienda -->
    <string name="store_name">Indicá el nombre de la tienda</string>
    <string name="store_coord">Ubique su tienda en el mapa</string>
    <string name="store_address">Indicá la dirección de la tienda</string>
    <string name="store_image">Agregá imágenes de la tienda</string>
    <string name="store_logo">Cargá una imagen que represente tu tienda</string>
    <string name="store_portada">Cargá una imagen de portada de tu tienda</string>
    <string name="store_desc">Describí tu tienda</string>
    <string name="store_shipping">¿Realiza envíos?</string>
    <string name="type_shipping">¿Cómo querés entregar tus productos?</string>
    <string name="shipping_price">Indique el costo del envío por correo</string>
    <string name="review_publish">Revisá y publicá</string>
    <string name="user_address">Mis Direcciones</string>
    <string name="user_new_address">Ingrese su dirección</string>

    <!--Agregar artículo-->
    <string name="article_name">Indicá el nombre del artículo</string>
    <string name="article_cat">¿Qué categoría define a tu artículo?</string>
    <string name="article_variants">Variantes del artículo</string>
    <string name="article_variants_det">Debe ingresar todas las variantes que tiene su producto. Una variante se compone de color y talle</string>
    <string name="article_genre">¿A qué género está destinado?</string>
    <string name="article_images">Imágenes del artículo</string>
    <string name="article_price">¿Cuál es el precio del artículo?</string>
    <string name="vaiants_tit">Indique las variantes del artículo</string>

    <!--Filtros-->
    <string name="order_relevant">Más relevante</string>
    <string name="order_price_minus">Menor precio</string>
    <string name="order_price_more">Mayor precio</string>
    <string name="filter_cat">Categoría</string>
    <string name="filter_genre">Genero</string>
    <string name="filter_size">Talle</string>
    <string name="filter_color">Color</string>
    <string name="filter_price">Precio Min - Max</string>

    <string name="card_number_hint">NÚMERO DE LA TARJETA</string>
    //Default value: "ENTER CARD NUMBER"
    <string name="card_name_hint">APELLIDO Y NOMBRE</string>
    //Default value: "ENTER CARD NAME"

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="fileprovider">com.example.suitapp</string>
</resources>