<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/menu_actions"
        android:checkableBehavior="none">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_solid"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_search_solid"
            android:title="@string/menu_search" />
        <item
            android:id="@+id/nav_notifications"
            android:icon="@drawable/ic_bell_solid"
            android:title="@string/menu_notifications" />
        <item
            android:id="@+id/nav_favs"
            android:icon="@drawable/ic_heart_solid"
            android:title="@string/menu_favs" />
        <item
            android:id="@+id/nav_shopping"
            android:icon="@drawable/ic_shopping_bag_solid"
            android:title="@string/menu_shopping" />
        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/ic_user_circle_solid"
            android:title="@string/menu_account" />
    </group>
    <group
        android:id="@+id/menu_categories"
        android:checkableBehavior="none">
        <item
            android:id="@+id/nav_categories"
            android:icon="@drawable/ic_list_solid"
            android:title="@string/menu_categories" />
        <item
            android:id="@+id/nav_stores"
            android:icon="@drawable/ic_store_solid"
            android:title="@string/menu_stores" />
    </group>
    <group
        android:id="@+id/menu_bottom"
        android:checkableBehavior="none">
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_question_circle_regular"
            android:title="@string/menu_about" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_sign_out_alt_solid"
            android:title="@string/menu_logout" />
    </group>
</menu>