<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <action android:id="@+id/action_move_to_home"
        app:destination="@id/nav_home"/>

    <action android:id="@+id/action_move_to_login"
        app:destination="@id/nav_login"/>

    <action android:id="@+id/action_move_to_article"
        app:destination="@id/nav_article_detail"/>

    <action android:id="@+id/action_move_to_articles"
        app:destination="@id/nav_article"/>

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.suitapp.fragment.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_nav_cart"
            app:destination="@id/nav_cart" />
        <action
            android:id="@+id/action_nav_home_to_nav_search"
            app:destination="@id/nav_search"
            app:enterAnim="@anim/from_right"
            app:exitAnim="@anim/to_left"
            app:popEnterAnim="@anim/from_left"
            app:popExitAnim="@anim/to_right" />
        <action
            android:id="@+id/action_nav_home_to_nav_article"
            app:destination="@id/nav_article"
            app:enterAnim="@anim/from_right"
            app:exitAnim="@anim/to_left"
            app:popEnterAnim="@anim/from_left"
            app:popExitAnim="@anim/to_right" />
        <action
            android:id="@+id/action_nav_home_to_nav_article_detail"
            app:destination="@id/nav_article_detail"
            app:enterAnim="@anim/from_right"
            app:exitAnim="@anim/to_left"
            app:popEnterAnim="@anim/from_left"
            app:popExitAnim="@anim/to_right" />
        <action
            android:id="@+id/action_nav_home_to_nav_login"
            app:destination="@id/nav_login"
            app:enterAnim="@anim/from_left"
            app:exitAnim="@anim/to_right"
            app:popEnterAnim="@anim/from_right"
            app:popExitAnim="@anim/to_left" />
    </fragment>

    <fragment
        android:id="@+id/nav_search"
        android:name="com.example.suitapp.fragment.SearchFragment"
        android:label="@string/menu_search"
        tools:layout="@layout/fragment_search" >
        <action
            android:id="@+id/action_nav_search_to_nav_home"
            app:destination="@id/nav_home" />
        <action
            android:id="@+id/action_nav_search_to_nav_article"
            app:destination="@id/nav_article" />
    </fragment>

    <fragment
        android:id="@+id/nav_notifications"
        android:name="com.example.suitapp.fragment.NotificationFragment"
        android:label="@string/menu_notifications"
        tools:layout="@layout/fragment_notification_list" />

    <fragment
        android:id="@+id/nav_favs"
        android:name="com.example.suitapp.fragment.FavsFragment"
        android:label="@string/menu_favs"
        tools:layout="@layout/fragment_favs_list" >
        <action
            android:id="@+id/action_nav_favs_to_nav_search"
            app:destination="@id/nav_search"
            app:enterAnim="@anim/nav_default_pop_enter_anim" />
        <action
            android:id="@+id/action_nav_favs_to_nav_cart"
            app:destination="@id/nav_cart" />
        <action
            android:id="@+id/action_nav_favs_to_nav_article_detail"
            app:destination="@id/nav_article_detail"
            app:enterAnim="@anim/from_right"
            app:exitAnim="@anim/to_left"
            app:popEnterAnim="@anim/from_left"
            app:popExitAnim="@anim/to_right" />
        <action
            android:id="@+id/action_nav_favs_to_nav_article_added"
            app:destination="@id/nav_article_added"
            app:enterAnim="@anim/from_right"
            app:exitAnim="@anim/to_left"
            app:popEnterAnim="@anim/from_left"
            app:popExitAnim="@anim/to_right" />
    </fragment>

    <fragment
        android:id="@+id/nav_shopping"
        android:name="com.example.suitapp.fragment.ShoppingFragment"
        android:label="@string/menu_shopping"
        tools:layout="@layout/fragment_shopping" />

    <fragment
        android:id="@+id/nav_account"
        android:name="com.example.suitapp.fragment.AccountFragment"
        android:label="@string/menu_account"
        tools:layout="@layout/fragment_account" >
        <action
            android:id="@+id/action_nav_account_to_nav_article"
            app:destination="@id/nav_article"
            app:enterAnim="@anim/from_right"
            app:exitAnim="@anim/to_left"
            app:popEnterAnim="@anim/from_left"
            app:popExitAnim="@anim/to_right" >
            <argument
                android:name="isOwner"
                android:defaultValue="true" />
        </action>
        <action
            android:id="@+id/action_nav_account_to_nav_store_review"
            app:destination="@id/nav_store_review" />
        <action
            android:id="@+id/action_nav_account_to_nav_address"
            app:destination="@id/nav_address"
            app:enterAnim="@anim/from_right"
            app:exitAnim="@anim/to_left"
            app:popEnterAnim="@anim/from_left"
            app:popExitAnim="@anim/to_right" />
    </fragment>

    <fragment
        android:id="@+id/nav_categories"
        android:name="com.example.suitapp.fragment.CategoryFragment"
        android:label="@string/menu_categories"
        tools:layout="@layout/fragment_category_list" >
        <action
            android:id="@+id/action_nav_categories_to_nav_article"
            app:destination="@id/nav_article"
            app:enterAnim="@anim/from_right"
            app:exitAnim="@anim/to_left"
            app:popEnterAnim="@anim/from_left"
            app:popExitAnim="@anim/to_right" />
    </fragment>

    <fragment
        android:id="@+id/nav_stores"
        android:name="com.example.suitapp.fragment.StoresFragment"
        android:label="@string/menu_stores"
        tools:layout="@layout/fragment_store_list" >
        <action
            android:id="@+id/action_nav_stores_to_nav_article"
            app:destination="@id/nav_article"
            app:enterAnim="@anim/from_right"
            app:exitAnim="@anim/to_left"
            app:popEnterAnim="@anim/from_left"
            app:popExitAnim="@anim/to_right" />
    </fragment>

    <fragment
        android:id="@+id/nav_about"
        android:name="com.example.suitapp.fragment.AboutFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_about" />

    <fragment
        android:id="@+id/nav_cart"
        android:name="com.example.suitapp.fragment.CartFragment"
        android:label="@string/menu_cart"
        tools:layout="@layout/fragment_cart_list" >
        <action
            android:id="@+id/action_nav_cart_to_nav_search"
            app:destination="@id/nav_search" />
        <action
            android:id="@+id/action_nav_cart_to_nav_select_shipping"
            app:destination="@id/nav_select_shipping"
            app:enterAnim="@anim/from_right"
            app:exitAnim="@anim/to_left"
            app:popEnterAnim="@anim/from_left"
            app:popExitAnim="@anim/to_right" />
        <action
            android:id="@+id/action_nav_cart_to_nav_article"
            app:destination="@id/nav_article"
            app:enterAnim="@anim/from_right"
            app:exitAnim="@anim/to_left"
            app:popEnterAnim="@anim/from_left"
            app:popExitAnim="@anim/to_right" />
    </fragment>

    <fragment
        android:id="@+id/nav_article"
        android:name="com.example.suitapp.fragment.ArticleFragment"
        android:label="@string/menu_articles"
        tools:layout="@layout/fragment_articles" >
        <action
            android:id="@+id/action_nav_article_to_nav_cart"
            app:destination="@id/nav_cart" />
        <action
            android:id="@+id/action_nav_article_to_nav_search"
            app:destination="@id/nav_search" />
        <action
            android:id="@+id/action_nav_article_to_nav_article_detail"
            app:destination="@id/nav_article_detail"
            app:enterAnim="@anim/from_right"
            app:exitAnim="@anim/to_left"
            app:popEnterAnim="@anim/from_left"
            app:popExitAnim="@anim/to_right" />
        <argument
            android:name="isOwner"
            app:argType="boolean"
            android:defaultValue="false" />
        <action
            android:id="@+id/action_nav_article_self"
            app:destination="@id/nav_article"
            app:enterAnim="@anim/from_right"
            app:exitAnim="@anim/to_left"
            app:popEnterAnim="@anim/from_left"
            app:popExitAnim="@anim/to_right" />
        <argument
            android:name="storeId"
            app:argType="integer"
            android:defaultValue="0" />
        <action
            android:id="@+id/action_nav_article_to_nav_store_detail"
            app:destination="@id/nav_store_detail"
            app:enterAnim="@anim/from_right"
            app:exitAnim="@anim/to_left"
            app:popEnterAnim="@anim/from_left"
            app:popExitAnim="@anim/to_right" />
    </fragment>
    <fragment
        android:id="@+id/nav_article_detail"
        android:name="com.example.suitapp.fragment.ArticleDetailFragment"
        android:label="@string/menu_article_detail"
        tools:layout="@layout/fragment_article_detail" >
        <action
            android:id="@+id/action_nav_article_detail_to_nav_cart"
            app:destination="@id/nav_cart" />
        <action
            android:id="@+id/action_nav_article_detail_to_nav_search"
            app:destination="@id/nav_search" />
        <action
            android:id="@+id/action_nav_article_detail_to_nav_article_added"
            app:destination="@id/nav_article_added"
            app:enterAnim="@anim/from_right"
            app:exitAnim="@anim/to_left"
            app:popEnterAnim="@anim/from_left"
            app:popExitAnim="@anim/to_right" />
        <argument
            android:name="articleId"
            app:argType="integer"
            android:defaultValue="0" />
        <action
            android:id="@+id/action_nav_article_detail_to_nav_select_shipping"
            app:destination="@id/nav_select_shipping"
            app:enterAnim="@anim/from_right"
            app:exitAnim="@anim/to_left"
            app:popEnterAnim="@anim/from_left"
            app:popExitAnim="@anim/to_right" />
        <action
            android:id="@+id/action_nav_article_detail_to_nav_view_image"
            app:destination="@id/nav_view_image"
            app:enterAnim="@anim/from_right"
            app:exitAnim="@anim/to_left"
            app:popEnterAnim="@anim/from_left"
            app:popExitAnim="@anim/to_right" />
        <action
            android:id="@+id/action_nav_article_detail_to_nav_article"
            app:destination="@id/nav_article"
            app:enterAnim="@anim/from_right"
            app:exitAnim="@anim/to_left"
            app:popEnterAnim="@anim/from_left"
            app:popExitAnim="@anim/to_right" />
    </fragment>

    <fragment
        android:id="@+id/nav_article_added"
        android:name="com.example.suitapp.fragment.ArticleAddedFragment"
        tools:layout="@layout/fragment_article_added" >
        <action
            android:id="@+id/action_nav_article_added_to_nav_cart"
            app:destination="@id/nav_cart"
            app:enterAnim="@anim/from_right"
            app:exitAnim="@anim/to_left"
            app:launchSingleTop="true"
            app:popEnterAnim="@anim/from_left"
            app:popExitAnim="@anim/to_right" />
        <action
            android:id="@+id/action_nav_article_added_to_nav_select_shipping"
            app:destination="@id/nav_select_shipping"
            app:enterAnim="@anim/from_right"
            app:exitAnim="@anim/to_left"
            app:popEnterAnim="@anim/from_left"
            app:popExitAnim="@anim/to_right" />
    </fragment>

    <fragment
        android:id="@+id/nav_login"
        android:name="com.example.suitapp.fragment.LoginFragment"
        tools:layout="@layout/fragment_login" >
    </fragment>

    <fragment
        android:id="@+id/nav_select_shipping"
        android:name="com.example.suitapp.fragment.SelectShippingFragment"
        android:label="@string/cart_select_shipping"
        tools:layout="@layout/fragment_select_shipping">
        <action
            android:id="@+id/action_nav_select_shipping_to_nav_card_credit"
            app:destination="@id/nav_card_credit"
            app:enterAnim="@anim/from_right"
            app:exitAnim="@anim/to_left"
            app:popEnterAnim="@anim/from_left"
            app:popExitAnim="@anim/to_right" />
        <argument
            android:name="articles"
            app:argType="com.example.suitapp.model.Article[]" />
        <action
            android:id="@+id/action_nav_select_shipping_to_nav_address"
            app:destination="@id/nav_address"
            app:enterAnim="@anim/from_right"
            app:exitAnim="@anim/to_left"
            app:popEnterAnim="@anim/from_left"
            app:popExitAnim="@anim/to_right" />
    </fragment>

    <fragment
        android:id="@+id/nav_card_credit"
        android:name="com.example.suitapp.fragment.CreditCardFragment"
        android:label="@string/cart_credit_card"
        tools:layout="@layout/fragment_credit_card">
        <action
            android:id="@+id/action_nav_card_credit_to_nav_shop_confirm"
            app:destination="@id/nav_shop_confirm"
            app:enterAnim="@anim/from_right"
            app:exitAnim="@anim/to_left"
            app:popEnterAnim="@anim/from_left"
            app:popExitAnim="@anim/to_right" />
    </fragment>

    <fragment
        android:id="@+id/nav_shop_confirm"
        android:name="com.example.suitapp.fragment.ShopConfirmFragment"
        android:label=""
        tools:layout="@layout/fragment_shop_confirm">
        <action
            android:id="@+id/action_nav_shop_confirm_to_nav_congrats_shop"
            app:destination="@id/nav_congrats_shop"
            app:enterAnim="@anim/from_right"
            app:exitAnim="@anim/to_left"
            app:popEnterAnim="@anim/from_left"
            app:popExitAnim="@anim/to_right"
            app:popUpTo="@id/nav_home"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/nav_store_detail"
        android:name="com.example.suitapp.fragment.StoreDetailFragment"
        android:label=""
        tools:layout="@layout/fragment_store_detail">
        <argument
            android:name="store"
            app:argType="com.example.suitapp.model.Store" />
    </fragment>

    <fragment
        android:id="@+id/nav_view_image"
        android:name="com.example.suitapp.fragment.addStore.ViewImageFragment"
        android:label="@string/store_shipping"
        tools:layout="@layout/fragment_view_image">

        <argument
            android:name="imageView"
            app:argType="integer"
            android:defaultValue="0" />
    </fragment>

    <fragment
        android:id="@+id/nav_address"
        android:name="com.example.suitapp.fragment.AddressFragment"
        android:label="@string/user_address"
        tools:layout="@layout/fragment_address">
        <action
            android:id="@+id/action_nav_address_to_nav_new_address"
            app:destination="@id/nav_new_address"
            app:enterAnim="@anim/from_right"
            app:exitAnim="@anim/to_left"
            app:popEnterAnim="@anim/from_left"
            app:popExitAnim="@anim/to_right" />
    </fragment>

    <fragment
        android:id="@+id/nav_new_address"
        android:name="com.example.suitapp.fragment.UserAddressFragment"
        android:label="@string/user_address"
        tools:layout="@layout/fragment_store_address">
    </fragment>

    <fragment
        android:id="@+id/nav_congrats_shop"
        android:name="com.example.suitapp.fragment.CongratsShopFragment"
        android:label="@string/user_address"
        tools:layout="@layout/fragment_congrats_shop">
        <action
            android:id="@+id/action_nav_congrats_shop_to_nav_home"
            app:destination="@id/nav_home"
            app:enterAnim="@anim/from_left"
            app:exitAnim="@anim/to_right"
            app:popEnterAnim="@anim/from_right"
            app:popExitAnim="@anim/to_left"
            app:popUpTo="@id/nav_home"
            app:popUpToInclusive="true"/>
        <action
            android:id="@+id/action_nav_congrats_shop_to_nav_shopping"
            app:destination="@id/nav_shopping"
            app:enterAnim="@anim/from_left"
            app:exitAnim="@anim/to_right"
            app:popEnterAnim="@anim/from_right"
            app:popExitAnim="@anim/to_left"
            app:popUpTo="@id/nav_home"
            app:popUpToInclusive="true" />
    </fragment>
</navigation>